web socket impl

--- a/MadRobot/trunk/src/com/madrobot/net/client/oauth/package.html
+++ b/MadRobot/trunk/src/com/madrobot/net/client/oauth/package.html
@@ -2,7 +2,7 @@
 <html>
 <head></head>
 <body>
-OAuth library.
+OAuth client library.
  <p>
  <b>Signing an HTTP message using OAuthConsumer</b><br/>
  If you have already obtained an access token from your service provider that allows you to access a protected resource, you can sign a request to that resource using Signpost as follows<br/>
