--- a/MadRobot/trunk/src/com/madrobot/di/package.html
+++ b/MadRobot/trunk/src/com/madrobot/di/package.html
@@ -2,7 +2,7 @@
 <html>
 <head></head>
 <body>
-Data interchange formats(JSON,CSV,XML) Parsing and processing utilities
+Data interchange formats(JSON,CSV,XML,plist) Parsing and processing utilities
  <p>
  Included utilities
  <ul>
