--- a/MadRobot/trunk/src/com/madrobot/di/plist/package.html
+++ b/MadRobot/trunk/src/com/madrobot/di/plist/package.html
@@ -3,7 +3,7 @@
 <head></head>
 <body>
 <p>
-Plist processing component.
+Utilities to handle iPhone's <b>Property List</b>(.plist) format.
 <br/>
 Supported formats<a href="#Supported_formats" class="section_anchor"></a></h1><p><table class="wikitable"><tr><td style="border: 1px solid #ccc; padding: 5px;"> <strong>Format</strong> </td><td style="border: 1px solid #ccc; padding: 5px;"> <strong>Parse</strong> </td><td style="border: 1px solid #ccc; padding: 5px;"> <strong>Create</strong> </td></tr> <tr><td style="border: 1px solid #ccc; padding: 5px;"> OS X / iOS XML </td><td style="border: 1px solid #ccc; padding: 5px;"> yes </td><td style="border: 1px solid #ccc; padding: 5px;"> yes </td></tr> <tr><td style="border: 1px solid #ccc; padding: 5px;"> OS X / iOS Binary </td><td style="border: 1px solid #ccc; padding: 5px;"> yes<strong> </td><td style="border: 1px solid #ccc; padding: 5px;"> yes </td></tr> <tr><td style="border: 1px solid #ccc; padding: 5px;"> OS X / iOS ASCII </td><td style="border: 1px solid #ccc; padding: 5px;"> yes </td><td style="border: 1px solid #ccc; padding: 5px;"> no </td></tr> <tr><td style="border: 1px solid #ccc; padding: 5px;"> GNUstep ASCII </td><td style="border: 1px solid #ccc; padding: 5px;"> yes </td><td style="border: 1px solid #ccc; padding: 5px;"> no </td></tr> <tr><td style="border: 1px solid #ccc; padding: 5px;"> NeXTSTEP ASCII </td><td style="border: 1px solid #ccc; padding: 5px;"> yes </td><td style="border: 1px solid #ccc; padding: 5px;"> no </td></tr> </table>
 <br/>
