--- a/MadRobot/trunk/src/com/madrobot/geom/package.html
+++ b/MadRobot/trunk/src/com/madrobot/geom/package.html
@@ -2,7 +2,7 @@
 <html>
 <head></head>
 <body>
-Geometric primitive utilities
+Geometric primitive utilities. Indispensable routines that drive the math behind  games and custom widgets.  
  
  <p>
  
