--- a/MadRobot/trunk/src/com/madrobot/graphics/package.html
+++ b/MadRobot/trunk/src/com/madrobot/graphics/package.html
@@ -2,7 +2,7 @@
 <html>
 <head></head>
 <body>
-Bitmap, Graphics and Color Utilities
+Extensions to the already awesome 2D graphics primitives on Android
  <p>
  
  </p>
