--- a/MadRobot/trunk/src/com/madrobot/hardware/location/package.html
+++ b/MadRobot/trunk/src/com/madrobot/hardware/location/package.html
@@ -2,7 +2,7 @@
 <html>
 <head></head>
 <body>
-Location utilities and GPS helper classes
+Utilities that simplify Location management using the most efficient onboard providers. As well as a Geo Hash implementation
  
  <p>
  
