--- a/MadRobot/trunk/src/com/madrobot/hardware/package.html
+++ b/MadRobot/trunk/src/com/madrobot/hardware/package.html
@@ -2,7 +2,7 @@
 <html>
 <head></head>
 <body>
-Device hardware querying utilities.
+Device hardware(Sensors,Accessories) querying and reporting utilities.
  <p>
  Queries device paramters like
  <ul>
