--- a/MadRobot/trunk/src/com/madrobot/io/package.html
+++ b/MadRobot/trunk/src/com/madrobot/io/package.html
@@ -2,7 +2,7 @@
 <html>
 <head></head>
 <body>
-I/O Utilities
+I/O Utilities to assist with the most complex of I/O tasks with simple yet powerful error handling and management
  <p>
  
  </p>
