--- a/MadRobot/trunk/src/com/madrobot/lang/reflect/package.html
+++ b/MadRobot/trunk/src/com/madrobot/lang/reflect/package.html
@@ -2,7 +2,7 @@
 <html>
 <head></head>
 <body>
-Object utilities as well as classes that help with reflection operations on classes, methods,  fields, enums. 
+Object utilities as well as classes that help with reflection operations on classes, methods,  fields and enums. 
  <p>
  
  </p>
