--- a/MadRobot/trunk/src/com/madrobot/net/client/async/package.html
+++ b/MadRobot/trunk/src/com/madrobot/net/client/async/package.html
@@ -2,7 +2,7 @@
 <html>
 <head></head>
 <body>
-Async Http client
+Highly responsive and simple Asynchronous Http client implementation.
  <p>
  </p>
 </body>
