--- a/MadRobot/trunk/src/com/madrobot/net/client/package.html
+++ b/MadRobot/trunk/src/com/madrobot/net/client/package.html
@@ -2,7 +2,7 @@
 <html>
 <head></head>
 <body>
-Common network client implementations
+Implementations for common network clients like TCP, UDP, Time, Finger and Socket
  <p>
 <b><u>Usage Examples</b></u></br><br/>
 <b>XML-RPC client</b>
