--- a/MadRobot/trunk/src/com/madrobot/ui/widgets/package.html
+++ b/MadRobot/trunk/src/com/madrobot/ui/widgets/package.html
@@ -2,7 +2,7 @@
 <html>
 <head></head>
 <body>
-Custom Widgets.
+A whole lotta Custom UI Widgets.
  <p>
 The attribute set for each widget is named after the widget and is declared in the values/attrs.xml file
  </p>
