--- a/MadRobot/trunk/src/com/madrobot/io/file/package.html
+++ b/MadRobot/trunk/src/com/madrobot/io/file/package.html
@@ -2,7 +2,7 @@
 <html>
 <head></head>
 <body>
-File and File System related tools and utilities
+File,file system, file system based caches and utilities
  <p>
  
  </p>
